@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.142 2003/12/25 19:02:01 jbj Exp $
+# $Id: macros.in,v 1.143 2003/12/28 15:14:40 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -367,10 +367,10 @@ package or when debugging this package.\
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
 # helpers are also used by @RPMCONFIGDIR@/rpmdeps {--provides|--requires).
-#%__perl_provides	/usr/lib/rpm/perldeps --provides
-#%__perl_requires	/usr/lib/rpm/perldeps --requires
-%__perl_provides	@RPMCONFIGDIR@/perl.prov
-%__perl_requires	@RPMCONFIGDIR@/perl.req
+%__perl_provides	@RPMCONFIGDIR@/perldeps --provides
+%__perl_requires	@RPMCONFIGDIR@/perldeps --requires
+#%__perl_provides	@RPMCONFIGDIR@/perl.prov
+#%__perl_requires	@RPMCONFIGDIR@/perl.req
 
 #
 # fixowner, fixgroup, and fixperms are run at the end of hardcoded setup
